--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,7 +7,7 @@ libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 #endif
 libtrace_la_CFLAGS = @ADD_INCLS@
 libtrace_la_LIBADD = @ADD_LIBS@ $(top_builddir)/replace/libreplace.a
-libtrace_la_LDFLAGS=-version-info 2:15b:0 @ADD_LDFLAGS@
+libtrace_la_LDFLAGS=-version-info 2:16:0 @ADD_LDFLAGS@
 
 dagapi.c:
 	cp @DAG_TOOLS_DIR@/dagapi.c .
