--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(libtrace,2.0.17,[libtrace@wand.net.nz],libtrace)
+AC_INIT(libtrace,2.0.18[libtrace@wand.net.nz],libtrace)
 AC_CONFIG_SRCDIR(lib/trace.c)
-AM_INIT_AUTOMAKE(libtrace,2.0.17)
+AM_INIT_AUTOMAKE(libtrace,2.0.18)
 
 AC_CONFIG_FILES([Makefile lib/Makefile])
 dnl GNU C library
