--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS=lib
 man_MANS = docs/man/man3/[a-zA-Z]*.3
-EXTRA_DIST=examples docs $(man_MANS)
+EXTRA_DIST=examples docs/html docs/latex docs/man $(man_MANS)
 
 .PHONY: docs
 
@@ -10,7 +10,10 @@ bootstrap-clean:
 		mkinstalldirs stamp-h.in \
 		lib/Makefile.in replace/libreplace.la  replace/Makefile.in
 	$(RM) -rf autom4te.cache/
-	
+
+dist-hook:
+	for i in `\ls examples | grep -v CVS`; do make -C examples/$$i clean; done
+
 docs:
 	doxygen libtrace.doxygen
 
