--- a/configure.in
+++ b/configure.in
@@ -76,6 +76,18 @@ AC_FUNC_REALLOC
 # *BSD doesn't have strndup. Currently provide our own.
 AC_REPLACE_FUNCS(strndup)
 
+# Check to see if we have libpcap
+AC_CHECK_LIB(pcap,pcap_open_live,
+	     have_pcap_open_live=true,
+	     have_pcap_open_live=false)
+
+if test "$have_pcap_open_live" = true; then
+    AC_DEFINE(HAVE_PCAP,1,[Conditional for building PCAP support])
+    ADD_LIBS="$ADD_LIBS  -lpcap"
+else
+    AC_DEFINE(HAVE_PCAP,0,[Conditional for building PCAP support])
+fi	
+
 # Earlier versions of pcap don't have pcap_open_dead. EG: the one OpenBSD
 # ships with. Even Debian Woody is more up to date.
 AC_CHECK_LIB(pcap,pcap_open_dead,
